refactor(dsa10): replace removeFirst() with remove(0)